# local-Stocks-analysis_test

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  database.py  main.py  server.py
backend/services/: README.md  README_VPS.md  ai_investment_analyzer.py  ai_local_engine.py  ai_news_agent.py  ai_scheduler.py  auto_sync_scheduler.py  backtest_engine.py  config.py  crypto_analyzer.py  crypto_api.py  data_engine.py  data_sources.py  deep_learning_engine.py  deploy-vps.sh  deploy.sh  egx-api.service  egx_api_service.py  egx_api_service_FIXED.py  egx_api_service_UPDATED.py  egx_data_fetcher_unified.py  egx_unified_service.py  enhanced_data_sources.py  external_data_sync.py  frontend_api_aliases.py  iterative_learning.py  iterative_learning_engine.py  local_egx_api.py  market_scheduler.py  ml_engine.py  mubasher_sync.py  recommendation_api.py  recommendation_verifier.py  requirements.txt  start_service.sh  sync_from_website.py  sync_manager.py  technical_analysis.py  test-local.sh  test_internal.py  (+5 more)
data/: custom.db  egx_data.db
docs/: API.md  DATA_SOURCES.md  DEPLOYMENT.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
scripts/: delete_tasks.bat  deploy-vps.sh  run.bat  run.sh  run_ai_batch.bat  run_all_tasks.bat  run_market_update.bat  run_mubasher_sync.bat  run_website_sync.bat  schedule_market_updates.bat  schedule_tasks.bat  setup_windows_tasks.bat  setup_windows_tasks_delete.bat  start_server.bat  update_data.py
